[tool.poetry]
name = "brainstorm-api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
fastapi = {version = "^0.108.0",  extras = ["all"]}
SQLAlchemy = {version = "^2.0.22"}
alembic = "^1.9.0"
asyncpg= "^0.29.0"
greenlet = ">=2.0.1"
pyjwt = "^2.6.0"
python-multipart = "^0.0.6"
amqp = "^5.0.0"
pydantic-settings = "^2.1.0"
celery-types = "^0.20.0"
cryptography = "^41.0.7"
sqladmin = "^0.16.0"
types-python-dateutil = "^2.8.19.20240106"
pydash = "^7.0.6"
requests = "^2.32.3"
redis = "^7.1.0"
celery = "^5.6.0"
aioredis = "^2.0.1"
nostr-sdk = "0.41.0"
neo4j = "^6.0.3"
tqdm = "^4.67.1"
pynacl = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^5.0.4"
mypy = "^1.9.0"
poethepoet = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


[tool.poe.tasks]
test = "pytest ./tests"
check_fmt = "black --check ./app"
check_imports = "isort --check ./app"
check_lint = "flake8 ./app --max-line-length 100"
check_types = "mypy ./app"
check_all = ["check_fmt", "check_imports", "check_lint", "check_types", "test"]